FIX: Additional plot script is cached for every span.