@@ -13,7 +13,7 @@ import static transcript.Transcript.en;
 
 import java.time.Period;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
 
 import cointoss.Market;
 import cointoss.MarketService;
@@ -28,9 +28,11 @@ import cointoss.trading.VolumeCross;
 import cointoss.util.Chrono;
 import cointoss.util.Num;
 import cointoss.verify.BackTest;
+import kiss.I;
 import stylist.Style;
 import stylist.StyleDSL;
 import trademate.chart.ChartView;
+import trademate.chart.PlotScript;
 import trademate.chart.builtin.TraderPlot;
 import trademate.setting.SettingStyles;
 import transcript.Transcript;
@@ -311,7 +313,7 @@ public class BackTestView extends View implements Analyzer {
 
         chart.market.set(market);
         chart.scripts.clear();
-        chart.scripts.addAll(traders.stream().map(t -> new TraderPlot(t)).collect(Collectors.toList()));
+        chart.scripts.addAll(I.signal(traders).map(trader -> (Supplier<PlotScript>) () -> new TraderPlot(trader)).toList());
     }
 
     /**
